objects/Opportunity_Relations__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To link the case associated for the reason behind the Buy/Sell</description>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.Type</field>
                <operation>equals</operation>
                <value>Transfer Leads to New CRM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunity Relationships</relationshipLabel>
        <relationshipName>Opportunity_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>New Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Relationships (Original Opportunity)</relationshipLabel>
        <relationshipName>Opportunity_Relations1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Relationships (New Opportunity)</relationshipLabel>
        <relationshipName>Opportunity_Relations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Cloning__c</fullName>
        <description>Business Unit: HELMS
Jira Story: LMS-4878 &amp; LMS-5028
Description: It describes the type of relationship.
Source System: Manual and automated process depending on the type
Integration:NA
Data Transformation: NA</description>
        <label>Relationship Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer Buy-Sell</fullName>
                </value>
                <value>
                    <fullName>Duplicate-Similar</fullName>
                </value>
                <value>
                    <fullName>Customer Requested Dealer Reassignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Relationship</label>
    <nameField>
        <displayFormat>0R-{0000}</displayFormat>
        <label>Opportunity Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>